--- a/InwardPolicy.Core.App/Areas/Transaction/Views/FirePolicyRisk/FirePolicyRisk.cshtml
+++ b/InwardPolicy.Core.App/Areas/Transaction/Views/FirePolicyRisk/FirePolicyRisk.cshtml
@@ -6,111 +6,124 @@
 <div class="row justify-content-center mb-2">
     <h1>ADD RISK</h1>
     <div class="col">
-        <div class="container h-auto p-4 border bg-light rounded shadow mt-2">
-            @*<div class="mb-3">
-                    <a href="@Url.Action("BackAction")" class="btn btn-secondary text-light">
+        <form method="post">
+            <div class="container h-auto p-4 border bg-light rounded shadow mt-2">
+                <div class="mb-3">
+                    <button type="button" onClick="BackBtnClick()" class="btn btn-secondary text-light">
                         <i class="bi bi-arrow-left-circle"></i> Back
-                    </a>
+                    </button>
                 </div>
                 <div class="text-end">
-                    <a href="@Url.Action("AddNewAction")" class="btn btn-primary text-light">
+                    <button class="btn btn-primary text-light">
                         <i class="bi bi-plus-circle"></i> Add New
-                    </a>
+                    </button>
                 </div>
-                <div class="text-start">
-                    @Html.Label("Risk Id:", htmlAttributes: new { @class = "form-label" })
-                    <span>@Model.RiskUid</span>
-                </div>*@
 
-            <div class="row mb-3">
-                <!-- RISK_CLASS -->
-                <div class="col-md-4">
-                    @Html.LabelFor(m => m.FirePolicyRisk.RiskClass, "Risk Class", new { @class = "form-label" })
-                    <span class="text-danger required-asterisk">*</span>
-                    @Html.DropDownListFor(
-                            m => m.FirePolicyRisk.RiskClass,
-                            new SelectList(Model.RiskClass, "Value", "Text"),
-                            new { @id = "ddlRiskClass", @requred = "required", @onchange = "OnRiskChange()", @class = "form-select form-control" }
+
+                <div class="row mb-3">
+                    @Html.HiddenFor(m => m.Mode, new { @id = "hfMode" })
+                    @*<label>@Model.Mode</label>*@
+                    <!-- RISK_CLASS -->
+                    <div class="col-md-4">
+                        @Html.LabelFor(m => m.FirePolicyRisk.RiskClass, "Risk Class", new { @class = "form-label" })
+                        <span class="text-danger required-asterisk">*</span>
+                        @Html.DropDownListFor(
+                                m => m.FirePolicyRisk.RiskClass,
+                                new SelectList(Model.RiskClass, "Value", "Text"),
+                                new { @id = "ddlRiskClass", @requred = "required", @onchange = "OnRiskChange()", @class = "form-select form-control" }
+                            )
+
+                    </div>
+
+                    <!-- RISK_DESC -->
+                    <div class="col-md-4">
+                        @Html.LabelFor(m => m.FirePolicyRisk.RiskDesc, "Risk Description", new { @class = "form-label" })
+                        <span class="text-danger required-asterisk">*</span>
+                        @Html.TextBoxFor(m => m.FirePolicyRisk.RiskDesc, new { @class = "form-control", @maxlength = "120" })
+                    </div>
+
+                    <!-- RISK_SICurr -->
+                    <div class="col-md-4">
+                        @Html.LabelFor(m => m.FirePolicyRisk.RiskSICurr, "Risk SI Currency", new { @class = "form-label" })
+                        <span class="text-danger required-asterisk">*</span>
+                        @Html.DropDownListFor(
+                            m => m.FirePolicyRisk.RiskSICurr,
+                            new SelectList(Model.RiskCurrency, "Value", "Text"),
+                            new { @id = "ddlRiskSICurr", @class = "form-control", @disabled = "disabled" }
                         )
 
+                    </div>
                 </div>
 
-                <!-- RISK_DESC -->
-                <div class="col-md-4">
-                    @Html.LabelFor(m => m.FirePolicyRisk.RiskDesc, "Risk Description", new { @class = "form-label" })
-                    <span class="text-danger required-asterisk">*</span>
-                    @Html.TextBoxFor(m => m.FirePolicyRisk.RiskDesc, new { @class = "form-control", @maxlength = "120" })
+                <div class="row mb-3">
+                    <!-- RISK_FC_SI -->
+                    <div class="col-md-4">
+                        @Html.LabelFor(m => m.FirePolicyRisk.RiskFcSi, "Risk FC Sum Insured", new { @class = "form-label" })
+                        @Html.TextBoxFor(m => m.FirePolicyRisk.RiskFcSi, new { @id = "RiskFcSi", @class = "form-control text-end", @maxlength = "9", @onchange = "GetLC();", @onkeypress = "return isNumberKey(event);", @oninput = "limitDigits(this);" })
+
+                    </div>
+
+                    <!-- RISK_LC_SI -->
+                    <div class="col-md-4">
+                        @Html.LabelFor(m => m.FirePolicyRisk.RiskLcSi, "Risk LC Sum Insured", new { @class = "form-label" })
+                        @Html.TextBoxFor(m => m.FirePolicyRisk.RiskLcSi, new { @id = "RiskLcSi", @class = "form-control text-end", @onkeypress = "return isNumberKey(event);", @oninput = "limitDigits(this);" })
+                    </div>
+
+                    <!-- RISK_PREM_CURRENCY -->
+                    <div class="col-md-4">
+                        @Html.LabelFor(m => m.FirePolicyRisk.RiskPremCurr, "Risk Premium Currency", new { @class = "form-label" })
+                        @Html.DropDownListFor(
+                            m => m.FirePolicyRisk.RiskPremCurr,
+                            new SelectList(Model.RiskCurrency, "Value", "Text"),
+                            new { @id = "ddlRiskPremCurrency", @class = "form-control", @disabled = "disabled" }
+                        )
+                    </div>
                 </div>
 
-                <!-- RISK_SICurr -->
-                <div class="col-md-4">
-                    @Html.LabelFor(m => m.FirePolicyRisk.RiskSICurr, "Risk SI Currency", new { @class = "form-label" })
-                    <span class="text-danger required-asterisk">*</span>
-                    @Html.DropDownListFor(
-                        m => m.FirePolicyRisk.RiskSICurr,
-                        new SelectList(Model.RiskCurrency, "Value", "Text"),
-                        new { @id = "ddlRiskSICurr", @class = "form-control", @disabled = "disabled" }
-                    )
+                <div class="row mb-3">
+                    <!-- RISK_PREM_RATE -->
+                    <div class="col-md-4">
+                        @Html.LabelFor(m => m.FirePolicyRisk.RiskPremRate, "Risk Premium Rate", new { @class = "form-label" })
+                        @Html.TextBoxFor(m => m.FirePolicyRisk.RiskPremRate, new { @id = "txtPremiumRate", @class = "form-control text-end", @onchange = "GetLC();", @onkeypress = "return isNumberKey(event);", @oninput = "limitDigits(this);" })
+                    </div>
 
-                </div>
-            </div>
+                    <!-- RISK_FC_PREM -->
+                    <div class="col-md-4">
+                        @Html.LabelFor(m => m.FirePolicyRisk.RiskFcPrem, "Risk FC Premium", new { @class = "form-label" })
+                        @Html.TextBoxFor(m => m.FirePolicyRisk.RiskFcPrem, new { @id = "RiskFcPrem", @class = "form-control text-end", @onkeypress = "return isNumberKey(event);", @oninput = "limitDigits(this);" })
+                    </div>
 
-            <div class="row mb-3">
-                <!-- RISK_FC_SI -->
-                <div class="col-md-4">
-                    @Html.LabelFor(m => m.FirePolicyRisk.RiskFcSi, "Risk FC Sum Insured", new { @class = "form-label" })
-                    @Html.TextBoxFor(m => m.FirePolicyRisk.RiskFcSi, new { @id = "RiskFcSi", @class = "form-control text-end", @maxlength = "9", @onchange = "GetLC();", @onkeypress = "return isNumberKey(event);", @oninput = "limitDigits(this);" })
-
-                </div>
-
-                <!-- RISK_LC_SI -->
-                <div class="col-md-4">
-                    @Html.LabelFor(m => m.FirePolicyRisk.RiskLcSi, "Risk LC Sum Insured", new { @class = "form-label" })
-                    @Html.TextBoxFor(m => m.FirePolicyRisk.RiskLcSi, new { @id = "RiskLcSi", @class = "form-control text-end", @onkeypress = "return isNumberKey(event);", @oninput = "limitDigits(this);" })
+                    <!-- RISK_LC_PREM -->
+                    <div class="col-md-4">
+                        @Html.LabelFor(m => m.FirePolicyRisk.RiskLcPrem, "Risk LC Premium", new { @class = "form-label" })
+                        @Html.TextBoxFor(m => m.FirePolicyRisk.RiskLcPrem, new { @id = "RiskLcPrem", @class = "form-control text-end", @onchange = "GetPremFc();", @onkeypress = "return isNumberKey(event);", @oninput = "limitDigits(this);" })
+                    </div>
                 </div>
 
-                <!-- RISK_PREM_CURRENCY -->
-                <div class="col-md-4">
-                    @Html.LabelFor(m => m.FirePolicyRisk.RiskPremCurr, "Risk Premium Currency", new { @class = "form-label" })
-                    @Html.DropDownListFor(
-                        m => m.FirePolicyRisk.RiskPremCurr,
-                        new SelectList(Model.RiskCurrency, "Value", "Text"),
-                        new { @id = "ddlRiskPremCurrency", @class = "form-control", @disabled = "disabled" }
-                    )
-                    @Html.ValidationMessageFor(m => m.FirePolicyRisk.RiskPremCurr, "Risk Premium Currency is required", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="row mb-3">
-                <!-- RISK_PREM_RATE -->
-                <div class="col-md-4">
-                    @Html.LabelFor(m => m.FirePolicyRisk.RiskPremRate, "Risk Premium Rate", new { @class = "form-label" })
-                    @Html.TextBoxFor(m => m.FirePolicyRisk.RiskPremRate, new { @id = "txtPremiumRate", @class = "form-control text-end", @onchange = "GetLC();", @onkeypress = "return isNumberKey(event);", @oninput = "limitDigits(this);" })
-                </div>
-
-                <!-- RISK_FC_PREM -->
-                <div class="col-md-4">
-                    @Html.LabelFor(m => m.FirePolicyRisk.RiskFcPrem, "Risk FC Premium", new { @class = "form-label" })
-                    @Html.TextBoxFor(m => m.FirePolicyRisk.RiskFcPrem, new {@id= "RiskFcPrem", @class = "form-control text-end", @onkeypress = "return isNumberKey(event);", @oninput = "limitDigits(this);" })
-                </div>
-
-                <!-- RISK_LC_PREM -->
-                <div class="col-md-4">
-                    @Html.LabelFor(m => m.FirePolicyRisk.RiskLcPrem, "Risk LC Premium", new { @class = "form-label" })
-                    @Html.TextBoxFor(m => m.FirePolicyRisk.RiskLcPrem, new { @id = "RiskLcPrem", @class = "form-control text-end", @onchange = "GetPremFc();", @onkeypress = "return isNumberKey(event);", @oninput = "limitDigits(this);" })
+                <div class="mt-3 col-md-12">
+                    <center>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </center>
                 </div>
             </div>
+        </form>
 
-            <div class="mt-3 col-md-12">
-                <center>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </center>
-            </div>
-        </div>
     </div>
 </div>
+@*@if (Model.Mode == "I") { 
+    <script>
+        $(document).ready(function () {
+            $("#ddlRiskSICurr").prop("disabled", false);
+            $("#ddlRiskPremCurrency").prop("disabled", false);
 
+        });
+    </script>
+}*@
 <script>
+    function BackBtnClick() {
+        console.log(poluid);
+        window.location.href = '@Url.Action("FirePolicy", "FirePolicy", new { area = "Transaction" })' + '/' + poluid + '/' + apprStatus ;
+    }
         function OnRiskChange(){
             var riskClass = $("#ddlRiskClass").val();
             console.log(riskClass);
@@ -124,10 +137,13 @@
                     if (response > 100) {
                         alert("Percentage cannot be greater than 100.")
                         $('#txtPremiumRate').val(0);
+                        
                         return;
                     }
+
                     else {
-                    $("#txtPremiumRate").val(response);
+                        $("#txtPremiumRate").val(response);
+                        GetLC()
                     }
                 },
                 error: function (error) {
@@ -153,12 +169,18 @@
         var path = window.location.pathname;
         var segments = path.split('/');
         var poluid = segments[4];
+    var temp = segments[6];
+    if (temp) {
+        apprStatus = temp;
+    } else {
+        apprStatus = 'N';
+    }
         function GetLC() {
             var riskfc = $('#RiskFcSi').val();
             var selectedValue = $('#ddlRiskClass').val();
             //var selectedValuePrem = $('#ddlRiskPremCurrency').val();
             var premrate = $('#txtPremiumRate').val();
-            
+
             if (!riskfc || !selectedValue || !premrate) {
                 return;
             }
@@ -184,8 +206,8 @@
                     var riskLc = siCurrRate * riskfc;
                     var roundedRiskLc = Math.round(riskLc * 100) / 100;  // Round to 2 decimal places
                     $("#RiskLcSi").val(roundedRiskLc);
-
-                    var riskPremLc = premrate * riskfc;
+                    console.log(premCurrRate);
+                    var riskPremLc = premrate / 100 * riskLc;
                     var roundedRiskPremLc = Math.round(riskPremLc * 100) / 100;  // Round to 2 decimal places
                     $("#RiskLcPrem").val(roundedRiskPremLc);
 
